--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,6 @@
     				<li><a href="#page-resume" class="link-page">Resume</a></li>
     				<li><a href="#page-skills" class="link-page">Skills</a></li>
     				<li><a href="#page-portfolio" class="link-page">Portfolio</a></li>
-    				<li><a href="#page-blog" class="link-page">Blog</a></li>
     				<li><a href="#page-contact" class="link-page">Contact</a></li>
     			</ul>
     		</div>
@@ -98,7 +97,7 @@
     			<!-- Description -->
     			<div class="vcard-profile-description">
     				<!-- Profile title -->
-    				<h1 class="profile-title">Hi, i'm <span class="color1">John Rex!</span></h1>
+    				<h1 class="profile-title">Hi, I'm <span class="color1">Aaron Pflaumer!</span></h1>
     				<h2 class="profile-subtitle">Web Designer & Developer</h2>
     				<!-- /Profile Title -->
     				<!-- Description Text -->
@@ -111,7 +110,7 @@
     				<div class="vcard-profile-description-feature">
     					<!-- item -->
     					<div class="vcard-profile-description-ft-item">
-    						<p>email:  john@dotrex.co / phone +123 456 789 111</p>
+    						<p>email: aaronpflaumer@gmail.com | phone +1 415 580 8581</p>
     					</div>
     					<!-- item -->
     				</div>
@@ -670,202 +669,6 @@
     		</div>
     		<!-- /SECTION: PORTFOLIO  -->
 
-    		<!-- SECTION: BLOG-->
-    		<div class="section-vcardbody section-page" id="page-blog">
-    			<div class="section-blog">
-
-    				<!-- Section title -->
-    	            <h2 class="section-title">Blog</h2>
-    	            <!-- /Section title -->
-
-    				<!-- BLOG POSTS -->
-    				<div class="blog-posts">
-    					<!-- blog-item -->
-    					<div class="blog-item">
-    						<div class="blog-item-wrapper">
-    							<!-- blog item thumbnail -->
-    							<div class="blog-item-thumb">
-    								<a href="single.html" class="loadPost"><img src="images/blog1.jpg" alt=""></a>
-    							</div>
-    							<!-- /blog item thumbnail -->
-    							<!-- Blog item - infos -->
-    							<div class="blog-item-infos">
-    								<!-- blog-item-title -->
-    								<div class="blog-item-title-wrapper">
-    									<h2 class="blog-item-title title-border"><a href="single.html" class="loadPost">How to succeed in meetings</a></h2>
-    								</div>
-    								<!-- /blog-item-title -->
-    								<!-- blog item - description -->
-    								<div class="blog-item-description">
-    									<p><a href="single.html" class="loadPost">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales varius sagittis. Proin a arcu vitae turpis congue facilisis. Quisque a lectus pretium, sagittis augue in, fringilla risus....</a></p>
-    								</div>
-    								<!-- /blog-item-description -->
-    								<!-- blog item - link -->
-    								<div class="blog-item-link">
-    									<a href="single.html" class="btn btn-default loadPost">See More</a>
-    								</div>
-    								<!-- /blog item - link -->
-    							</div>
-    							<!-- /blog item - infos -->
-    						</div>
-    					</div>
-    					<!-- /blog-item -->
-
-    					<!-- blog-item -->
-    					<div class="blog-item">
-    						<div class="blog-item-wrapper">
-    							<!-- blog item thumbnail -->
-    							<div class="blog-item-thumb">
-    								<a href="single.html" class="loadPost"><img src="images/blog2.jpg" alt=""></a>
-    							</div>
-    							<!-- /blog item thumbnail -->
-    							<!-- Blog item - infos -->
-    							<div class="blog-item-infos">
-    								<!-- blog-item-title -->
-    								<div class="blog-item-title-wrapper">
-    									<h2 class="blog-item-title title-border"><a href="single.html" class="loadPost">10 tips to improve your laptop</a></h2>
-    								</div>
-    								<!-- /blog-item-title -->
-    								<!-- blog item - description -->
-    								<div class="blog-item-description">
-    									<p><a href="single.html" class="loadPost">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales varius sagittis. Proin a arcu vitae turpis congue facilisis. Quisque a lectus pretium, sagittis augue in, fringilla risus....</a></p>
-    								</div>
-    								<!-- /blog-item-description -->
-    								<!-- blog item - link -->
-    								<div class="blog-item-link">
-    									<a href="single.html" class="btn btn-default loadPost">See More</a>
-    								</div>
-    								<!-- /blog item - link -->
-    							</div>
-    							<!-- /blog item - infos -->
-    						</div>
-    					</div>
-    					<!-- /blog-item -->
-
-    					<!-- blog-item -->
-    					<div class="blog-item">
-    						<div class="blog-item-wrapper">
-    							<!-- blog item thumbnail -->
-    							<div class="blog-item-thumb">
-    								<a href="single.html" class="loadPost"><img src="images/blog3.jpg" alt=""></a>
-    							</div>
-    							<!-- /blog item thumbnail -->
-    							<!-- Blog item - infos -->
-    							<div class="blog-item-infos">
-    								<!-- blog-item-title -->
-    								<div class="blog-item-title-wrapper">
-    									<h2 class="blog-item-title title-border"><a href="single.html" class="loadPost">News of the week</a></h2>
-    								</div>
-    								<!-- /blog-item-title -->
-    								<!-- blog item - description -->
-    								<div class="blog-item-description">
-    									<p><a href="single.html" class="loadPost">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales varius sagittis. Proin a arcu vitae turpis congue facilisis. Quisque a lectus pretium, sagittis augue in, fringilla risus....</a></p>
-    								</div>
-    								<!-- /blog-item-description -->
-    								<!-- blog item - link -->
-    								<div class="blog-item-link">
-    									<a href="single.html" class="btn btn-default loadPost">See More</a>
-    								</div>
-    								<!-- /blog item - link -->
-    							</div>
-    							<!-- /blog item - infos -->
-    						</div>
-    					</div>
-    					<!-- /blog-item -->
-
-    					<!-- blog-item -->
-    					<div class="blog-item">
-    						<div class="blog-item-wrapper">
-    							<!-- blog item thumbnail -->
-    							<div class="blog-item-thumb">
-    								<a href="single.html" class="loadPost"><img src="images/blog4.jpg" alt=""></a>
-    							</div>
-    							<!-- /blog item thumbnail -->
-    							<!-- Blog item - infos -->
-    							<div class="blog-item-infos">
-    								<!-- blog-item-title -->
-    								<div class="blog-item-title-wrapper">
-    									<h2 class="blog-item-title title-border"><a href="single.html" class="loadPost">How to be a leader</a></h2>
-    								</div>
-    								<!-- /blog-item-title -->
-    								<!-- blog item - description -->
-    								<div class="blog-item-description">
-    									<p><a href="single.html" class="loadPost">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales varius sagittis. Proin a arcu vitae turpis congue facilisis. Quisque a lectus pretium, sagittis augue in, fringilla risus....</a></p>
-    								</div>
-    								<!-- /blog-item-description -->
-    								<!-- blog item - link -->
-    								<div class="blog-item-link">
-    									<a href="single.html" class="btn btn-default loadPost">See More</a>
-    								</div>
-    								<!-- /blog item - link -->
-    							</div>
-    							<!-- /blog item - infos -->
-    						</div>
-    					</div>
-    					<!-- /blog-item -->
-
-    					<!-- blog-item -->
-    					<div class="blog-item">
-    						<div class="blog-item-wrapper">
-    							<!-- blog item thumbnail -->
-    							<div class="blog-item-thumb">
-    								<a href="single.html" class="loadPost"><img src="images/blog5.jpg" alt=""></a>
-    							</div>
-    							<!-- /blog item thumbnail -->
-    							<!-- Blog item - infos -->
-    							<div class="blog-item-infos">
-    								<!-- blog-item-title -->
-    								<div class="blog-item-title-wrapper">
-    									<h2 class="blog-item-title title-border"><a href="single.html" class="loadPost">Tips to talk in public</a></h2>
-    								</div>
-    								<!-- /blog-item-title -->
-    								<!-- blog item - description -->
-    								<div class="blog-item-description">
-    									<p><a href="single.html" class="loadPost">Designed by Norway-based practice Snhetta, in collaboration with local firm EHDD, the 10-story concrete structure will compliment SFMOMA’s original...</a></p>
-    								</div>
-    								<!-- /blog-item-description -->
-    								<!-- blog item - link -->
-    								<div class="blog-item-link">
-    									<a href="single.html" class="btn btn-default loadPost">See More</a>
-    								</div>
-    								<!-- /blog item - link -->
-    							</div>
-    							<!-- /blog item - infos -->
-    						</div>
-    					</div>
-    					<!-- /blog-item -->
-    				</div>
-    				 <!-- /BLOG POSTS -->
-    				<!-- Pagination -->
-    				<div class="section-pagination">
-    					<div class="row">
-    						<div class="col-xs-12">
-    							<span class="pagination-numbers">
-    								<a href="#">1</a>
-    								<a href="#">2</a>
-    								<a href="#">3</a>
-    								<a href="#">4</a>
-    								<a href="#">5</a>
-    								<a href="#">6</a>
-    							</span>
-    						</div>
-    					</div>
-    				</div>
-    				<!-- /Pagination -->
-    			</div>
-    		</div>
-    		<!-- /SECTION: BLOG  -->
-
-    		<!-- SECTION: BLOG SINGLE-->
-    		<div class="section-vcardbody section-page section-page-single" id="page-blog-single">
-    			<div class="section-blog-single">
-    				<!-- Load the single.html content via AJAX -->
-    				<div id="postHere"></div>
-    				<!-- /Load the single.html content via AJAX -->
-    			</div>
-    		</div>
-    		<!-- /SECTION: BLOG SINGLE  -->
-
     		<!-- SECTION: CONTACT-->
     		<div class="section-vcardbody section-page" id="page-contact">
     			<div class="section-contact">
@@ -873,11 +676,6 @@
     				<!-- Section title -->
     	            <h2 class="section-title">Contact</h2>
     	            <!-- /Section title -->
-
-    	            <div class="map">
-    	            	<div class="map-overlay"></div>
-    	            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8352.985568651915!2d-0.12905994797222892!3d51.50665753790812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1spt-BR!2sbr!4v1443128181953" height="250" style="border:0" allowfullscreen></iframe>
-    	            </div>
 
     	            <!-- Contact infos -->
                     <div class="contact-infos">
