--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aaron Pflaumer</title>
+    <title>Aaron Pflaumer - Software Developer</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -98,7 +98,7 @@
     			<div class="vcard-profile-description">
     				<!-- Profile title -->
     				<h1 class="profile-title">Hi, I'm <span class="color1">Aaron Pflaumer!</span></h1>
-    				<h2 class="profile-subtitle">Web Designer & Developer</h2>
+    				<h2 class="profile-subtitle">Software Developer</h2>
     				<!-- /Profile Title -->
     				<!-- Description Text -->
     				<hr class="hr1">
@@ -121,11 +121,9 @@
     			<div class="vcard-footer">
     				<!-- Social Icons -->
     				<div class="footer-social-icons">
-    					<a href="#"><i class="fa fa-instagram"></i></a>
-    					<a href="#"><i class="fa fa-facebook"></i></a>
-    					<a href="#"><i class="fa fa-twitter"></i></a>
-    					<a href="#"><i class="fa fa-linkedin"></i></a>
-    					<a href="#"><i class="fa fa-youtube"></i></a>
+    					<a href="https://www.facebook.com/apflaumer" target="_blank"><i class="fa fa-facebook"></i></a>
+    					<a href="https://www.linkedin.com/in/aaron-pflaumer-735b6411" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="https://github.com/aaronpflaumer" target="_blank"><i class="fa fa-github"></i></a>
     				</div>
     				<!-- /Social Icons -->
     			</div>
@@ -680,11 +678,11 @@
     	            <!-- Contact infos -->
                     <div class="contact-infos">
                     	<h4 class="contact-subtitle-1"><i class="fa fa-map"></i>&nbsp;   Address</h4>
-                    	<p>451 Lorem Ipsum, London - Uk</p>
+                    	<p>PO Box 834, Yucaipa, CA 92399</p>
                     	<h4 class="contact-subtitle-1"><i class="fa fa-phone-square"></i>&nbsp; Phone</h4>
-                    	<p>+61 3 8376 6284</p>
+                    	<p>+1 415 580 8581</p>
                     	<h4 class="contact-subtitle-1"><i class="fa fa-envelope"></i>&nbsp; Mail</h4>
-                    	<p>john.Rex@dotrex.com</p>
+                    	<p>aaronpflaumer@gmail.com</p>
                     </div>
                     <!-- /Contact infos -->
 
